# fishDetect

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: class_aliases.yaml  dataset.yaml  experiments.yaml  local.example.yaml  macbook_smoke.yaml  models.yaml  yolo_baselines.yaml
data/: README.md
docs/: DATA_PRIVACY.md  EXPERIMENTS.md  RESULTS.md
notebooks/: 00_dataset_audit.ipynb  00_local_setup_check.ipynb  01_dataset_audit.ipynb  01_visualize_annotations.ipynb  02_model_comparison.ipynb  02_prepare_detection_dataset.ipynb  03_visualize_ground_truth.ipynb  04_yolo_smoke_test_macbook.ipynb  05_train_yolo_models.ipynb  06_evaluate_models.ipynb  07_visual_review_predictions.ipynb  08_model_comparison_report.ipynb
scripts/: audit_classes.py  audit_dataset.py  check_local_setup.py  compare_experiments.py  evaluate_models.py  export_model.py  prepare_dataset.py  run_all_experiments.py  train_segmentation.py  train_torchvision_detector.py  train_yolo.py  visualize_ground_truth.py  visualize_predictions.py
src/fishdetect/: __init__.py  audit.py  config.py  converters.py  dataset.py  dive.py  experiment.py  pipeline.py  predictions.py  splits.py  transforms.py  viame.py
src/fishdetect/evaluation/: detection_metrics.py  plots.py  segmentation_metrics.py
src/fishdetect/models/: yolo.py  (+2 more)
tests/: conftest.py  test_config_and_groups.py  test_dataset_audit.py  test_dataset_conversion.py  test_dive_parser.py  test_metrics.py  test_predictions.py  test_splits.py  test_viame_parser.py  test_visualize_predictions.py  test_yolo_skip.py
(+8 files in other folders)
