[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishdetect-noaa-ml"
version = "0.1.0"
description = "Training and evaluation framework for Caribbean fish detection with cleaned VIAME/DIVE annotations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Internal research use" }
authors = [{ name = "NOAA Fish Detect contributors" }]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "Pillow>=9.0",
  "PyYAML>=6.0",
  "matplotlib>=3.6",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
training = [
  "torch>=2.0",
  "torchvision>=0.15",
  "ultralytics>=8.3",
  "opencv-python>=4.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
